--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,16 +1,10 @@
-[target.x86_64-pc-windows-msvc]
-rustflags = ["-Ctarget-feature=+crt-static"]
-[target.i686-pc-windows-msvc]
-rustflags = ["-C", "target-feature=+crt-static", "-C", "link-args=/NODEFAULTLIB:MSVCRT"]
-[target.'cfg(target_os="macos")']
+﻿[target.x86_64-pc-windows-msvc]
 rustflags = [
-    "-C", "link-args=-sectcreate __CGPreLoginApp __cgpreloginapp /dev/null",
+    "-C", "target-feature=+crt-static",
+    "-C", "link-arg=/NODEFAULTLIB:msvcrt.lib",
+    "-C", "link-arg=/DEFAULTLIB:libcmt.lib",
 ]
-#[target.'cfg(target_os="linux")']
-# glibc-static required, this may fix https://github.com/rustdesk/rustdesk/issues/9103, but I do not want this big change
-# this is unlikely to help also, because the other so files still use libc dynamically
-#rustflags = [
-#    "-C", "link-args=-Wl,-Bstatic -lc -Wl,-Bdynamic"
-#]
-[net]
-git-fetch-with-cli = true
+
+[env]
+VCPKG_DEFAULT_TRIPLET = "x64-windows-static"
+VCPKG_ROOT = "C:\vcpkg"
