--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,23 @@
-/build
-/target
-.vscode
-.idea
+# 编译文件
+/target/
+**/*.rs.bk
+
+# vcpkg 依赖（很大，不上传）
+/vcpkg/
+
+# 备份文件
+**/*.backup
+**/*.bak
+
+# 系统文件
 .DS_Store
-libsciter-gtk.so
-src/ui/inline.rs
-extractor
-__pycache__
-src/version.rs
-*dmg
-*exe
-*tgz
-cert.pfx
-*.bak
-*png
-*svg
-*jpg
-sciter.dll
-**pdb
-src/bridge_generated.rs
-src/bridge_generated.io.rs
-*deb
-rustdesk
-*.cache
-# appimage
-appimage/AppDir
-appimage/*.AppImage
-appimage/appimage-build
-appimage/*.xz
-# flutter
-flutter/linux/build/**
-flutter/linux/cmake-build-debug/**
-# flatpak
-flatpak/.flatpak-builder/**
-flatpak/ccache/**
-flatpak/.flatpak-builder/build/**
-flatpak/.flatpak-builder/shared-modules/**
-flatpak/.flatpak-builder/shared-modules/*.tar.xz
-flatpak/.flatpak-builder/debian-binary
-flatpak/build/**
-flatpak/repo/**
-flatpak/*.flatpak
-# bridge file
-lib/generated_bridge.dart
-# vscode devcontainer
-.gitconfig
-.vscode-server/
-.ssh
-.devcontainer/.*
-# build cache in examples
-examples/**/target/
-# ===
-vcpkg_installed
-flutter/lib/generated_plugin_registrant.dart
-libsciter.dylib
-flutter/web/
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# 其他大文件
+Cargo.lock
