--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -46,6 +46,9 @@ env:
   MACOS_P12_BASE64: "${{ secrets.MACOS_P12_BASE64 }}"
   UPLOAD_ARTIFACT: "${{ inputs.upload-artifact }}"
   SIGN_BASE_URL: "${{ secrets.SIGN_BASE_URL }}-2"
+  RELAY_SERVER: ${{ secrets.RELAY_SERVER }}
+  RS_PUB_KEY: ${{ secrets.RS_PUB_KEY }}
+  CUSTOM_API_URL: ${{ secrets.CUSTOM_API_URL }}
 
 jobs:
   generate-bridge:
@@ -89,6 +92,15 @@ jobs:
 
       - name: Checkout source code
         uses: actions/checkout@v4
+
+      - name: 替换配置
+        env:
+          RENDEZVOUS_SERVER: "${{ secrets.RENDEZVOUS_SERVER }}"
+          PUB_KEY: "${{ secrets.PUB_KEY }}"
+          ADMIN_URL: "http://${{ secrets.ADMIN_DOMAIN }}"
+        run: |
+          chmod +x .github/scripts/replace_config.sh
+          ./.github/scripts/replace_config.sh
 
       - name: Restore bridge files
         uses: actions/download-artifact@master
@@ -311,6 +323,14 @@ jobs:
         with:
           submodules: recursive
 
+      - name: 替换配置
+        env:
+          RENDEZVOUS_SERVER: "${{ secrets.RENDEZVOUS_SERVER }}"
+          PUB_KEY: "${{ secrets.PUB_KEY }}"
+          ADMIN_URL: "http://${{ secrets.ADMIN_DOMAIN }}"
+        run: |
+          chmod +x .github/scripts/replace_config.sh
+          ./.github/scripts/replace_config.sh
       - name: Install LLVM and Clang
         uses: rustdesk-org/install-llvm-action-32bit@master
         with:
@@ -460,6 +480,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+       
+      - name: 替换配置
+        env:
+          RENDEZVOUS_SERVER: "${{ secrets.RENDEZVOUS_SERVER }}"
+          PUB_KEY: "${{ secrets.PUB_KEY }}"
+          ADMIN_URL: "http://${{ secrets.ADMIN_DOMAIN }}"
+        run: |
+          chmod +x .github/scripts/replace_config.sh
+          ./.github/scripts/replace_config.sh        
 
       - name: Install flutter
         uses: subosito/flutter-action@v2
@@ -585,6 +614,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+
+      - name: 替换配置
+        env:
+          RENDEZVOUS_SERVER: "${{ secrets.RENDEZVOUS_SERVER }}"
+          PUB_KEY: "${{ secrets.PUB_KEY }}"
+          ADMIN_URL: "http://${{ secrets.ADMIN_DOMAIN }}"
+        run: |
+          chmod +x .github/scripts/replace_config.sh
+          ./.github/scripts/replace_config.sh
 
       - name: Import the codesign cert
         if: env.MACOS_P12_BASE64 != null
@@ -898,6 +936,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+    
+      - name: 替换配置
+        env:
+          RENDEZVOUS_SERVER: "${{ secrets.RENDEZVOUS_SERVER }}"
+          PUB_KEY: "${{ secrets.PUB_KEY }}"
+          ADMIN_URL: "http://${{ secrets.ADMIN_DOMAIN }}"
+        run: |
+          chmod +x .github/scripts/replace_config.sh
+          ./.github/scripts/replace_config.sh
 
       - name: Install flutter
         uses: subosito/flutter-action@v2
@@ -1170,6 +1217,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+   
+      - name: 替换配置
+        env:
+          RENDEZVOUS_SERVER: "${{ secrets.RENDEZVOUS_SERVER }}"
+          PUB_KEY: "${{ secrets.PUB_KEY }}"
+          ADMIN_URL: "http://${{ secrets.ADMIN_DOMAIN }}"
+        run: |
+          chmod +x .github/scripts/replace_config.sh
+          ./.github/scripts/replace_config.sh
 
       - name: Install flutter
         uses: subosito/flutter-action@v2
@@ -1336,6 +1392,15 @@ jobs:
         with:
           submodules: recursive
 
+      - name: 替换配置
+        env:
+          RENDEZVOUS_SERVER: "${{ secrets.RENDEZVOUS_SERVER }}"
+          PUB_KEY: "${{ secrets.PUB_KEY }}"
+          ADMIN_URL: "http://${{ secrets.ADMIN_DOMAIN }}"
+        run: |
+          chmod +x .github/scripts/replace_config.sh
+          ./.github/scripts/replace_config.sh
+          
       - name: Set Swap Space
         if: ${{ matrix.job.arch == 'x86_64' }}
         uses: pierotofy/set-swap-space@master
@@ -1665,6 +1730,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+
+      - name: 替换配置
+        env:
+          RENDEZVOUS_SERVER: "${{ secrets.RENDEZVOUS_SERVER }}"
+          PUB_KEY: "${{ secrets.PUB_KEY }}"
+          ADMIN_URL: "http://${{ secrets.ADMIN_DOMAIN }}"
+        run: |
+          chmod +x .github/scripts/replace_config.sh
+          ./.github/scripts/replace_config.sh
 
       - name: Modify vcpkg.json for armv7
         if: matrix.job.vcpkg-triplet == 'arm-linux'
